--- a/renderer/package.json
+++ b/renderer/package.json
@@ -12,12 +12,18 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-transition-group": "^4.4.4",
+    "@types/redux-immutable": "^4.0.1",
     "antd": "^4.16.13",
     "cropperjs": "^1.5.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.1.2",
+    "redux-immutable": "^4.0.0",
     "rxjs": "^7.4.0",
     "sass": "^1.43.4",
     "sass-loader": "^12.2.0",
