--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/main/main.js",
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && node open.js"
+    "start": "npm run compile && node open.js",
+    "rebuild": "electron-rebuild"
   },
   "author": "",
   "license": "ISC",
@@ -14,10 +15,12 @@
     "@types/screenshot-desktop": "^1.12.0",
     "electron": "^15.3.0",
     "electron-packager": "^15.4.0",
+    "electron-rebuild": "^3.2.4",
     "typescript": "^4.4.4"
   },
   "dependencies": {
     "get-pixels": "^3.3.3",
+    "robotjs": "^0.6.0",
     "rxjs": "^7.4.0",
     "screenshot-desktop": "^1.12.7"
   }
