--- a/renderer/package.json
+++ b/renderer/package.json
@@ -14,7 +14,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/react-transition-group": "^4.4.4",
     "@types/redux-immutable": "^4.0.1",
-    "antd": "^4.16.13",
+    "antd": "^4.17.0-alpha.10",
     "cropperjs": "^1.5.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
