--- a/renderer/package.json
+++ b/renderer/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/react-transition-group": "^4.4.4",
     "@types/redux-immutable": "^4.0.1",
+    "@types/sortablejs": "^1.10.7",
     "antd": "^4.17.0-alpha.10",
     "cropperjs": "^1.5.12",
     "react": "^17.0.2",
@@ -21,12 +22,14 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-sortablejs": "^6.0.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "redux-immutable": "^4.0.0",
     "rxjs": "^7.4.0",
     "sass": "^1.43.4",
     "sass-loader": "^12.2.0",
+    "sortablejs": "^1.14.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
